src/test/ui/macros/macro-backtrace-println.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/macro-backtrace-println.rs:24:30
   |
24 |     ($fmt:expr) => (myprint!(concat!($fmt, "/n"))); //~ ERROR no arguments were given
   |                              ^^^^^^^^^^^^^^^^^^^
...
28 |     myprintln!("{}");
   |     ----------------- in this macro invocation

error: aborting due to previous error

